deleted test_result.txt, updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ dataset/
 *.pth
 *.pyc
 .idea/
-cumulative_attention/validation_loss.txt
+cumulative_attention/*validation_loss*.txt
+*test_result*.txt
 cumulative_attention/history
 .DS_Store
